add grid shortcodes

--- a/public/css/sass/_grid_cells.scss
+++ b/public/css/sass/_grid_cells.scss
@@ -1,12 +1,26 @@
 // Loops to enumerate the classes for grid items
 @for $i from 1 through 12 {
-  .easy-grid-cell.cells-#{$i} {
+  .easy-grid-cell.cells_#{$i} {
     grid-column: span #{$i};
   }
 }
 
 @media screen and (max-width: $width__sm) {
   @for $i from 1 through 12 {
-    .easy-grid-cell.cells-#{$i}, { grid-column: span 12; }
+    .easy-grid-cell.cells_#{$i} { grid-column: span 12; }
   }
+}
+
+// some common cell combinations
+.easy-grid-cell.half_grid {
+  grid-column: span 6;
+}
+.easy-grid-cell.third_grid {
+  grid-column: span 4;
+}
+.easy-grid-cell.fourth_grid {
+  grid-column: span 3;
+}
+.easy-grid-cell.sixth_grid {
+  grid-column: span 2;
 }
