--- a/public/css/sass/_variables.scss
+++ b/public/css/sass/_variables.scss
@@ -1,7 +1,9 @@
 $width__sm: 1300px;
 
-$bg_color__cell: #f0f8ff;
-$bg_color__cell_alt: #6dbfe6;
+$bg_color__cell: #bfd8b2;
+$bg_color__cell_alt: #84a288;
 
 $grid_gap__default: 10px;
-$grid_gap__big: 10px;
+$grid_gap__big: 20px;
+
+$color__cell_border: #c1c1c1;
