--- a/public/css/sass/wp-easy-grid.scss
+++ b/public/css/sass/wp-easy-grid.scss
@@ -1,7 +1,5 @@
 /**
- * All of the CSS for your public-facing functionality should be
- * included in this file.
- * SCSS
+ * Grid CSS Styles
  */
 
 
