--- a/public/css/sass/_grid_main.scss
+++ b/public/css/sass/_grid_main.scss
@@ -19,6 +19,20 @@
     }
   }
 
+  .text-center {
+
+    .easy-grid-cell {
+      text-align: center;
+    }
+  }
+
+  .has_padding {
+
+    .easy-grid-cell {
+      padding: 1em;
+    }
+  }
+
   &.alternate {
 
     .easy-grid-cell {
