--- a/admin/css/wp-easy-grid-admin.css
+++ b/admin/css/wp-easy-grid-admin.css
@@ -7,23 +7,39 @@
 .wp_grid_select_cells,
 .wp_grid_select_grid {
   display: none;
-  position: absolute;
+  position: fixed;
   background-color: #fff;
-  padding: 12px 0;
+  padding: 0 0 1em;
   box-shadow: 0 3px 5px rgba(0,0,0,.2);
-  top: 185px;
-  left: 292px;
+  border: 1px solid #c5c5c5;
+  top: 200px;
+  left: calc( 50% - 200px );
+  width: 400px;
+  height: 400px;
   z-index: 1001;
 }
 
-.wp_grid_select_box {
-  width: 104px;
+.box_heading {
+  padding: 1.2em;
+  margin-bottom: 1em;
+  text-align: center;
+  background: #bfd8b2;
+  font-size: 2em;
+  font-weight: 700;
+  color: #fff;
 }
+
 .wp_grid_select_columns {
-  left: 396px;
+  width: 300px;
+  left: calc( 50% - 100px );
 }
 .wp_grid_select_cells {
-  left: 396px;
+  width: 300px;
+  left: calc( 50% - 100px );
+}
+.wp_grid_select_grid {
+  width: 300px;
+  left: calc( 50% - 100px );
 }
 
 .select_wp_grid {
@@ -43,4 +59,100 @@
   height: 18px;
   margin: 2px 6px 0 0;
   color: #555;
+}
+
+/*** ADMIN OPTIONS PAGE STYLES ***/
+.wrapper-grid {
+  display: grid;
+  grid-template-columns: auto 300px;
+  grid-template-areas: "left-wrap right-wrap";
+  grid-gap: 40px;
+}
+@media screen and (max-width: 1200px) {
+  .wrapper-grid {
+    grid-template-columns: 1fr;
+    grid-template-areas: "left-wrap" "right-wrap";
+  }
+}
+.left-wrapper {
+  grid-area: left-wrap;
+}
+.right-wrapper {
+  grid-area: right-wrap;
+}
+.banner-area {
+  background: #fff;
+  margin-top: 1em;
+  padding: 1em;
+}
+.separator {
+  clear: both;
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin: 20px 0;
+}
+.wp-easy-grid-desc {
+  background-color: #fff;
+  padding: 1em 2em;
+  margin-top: 1em;
+}
+.wp-easy-grid-desc img {
+  width: 1000px;
+  max-width: 100%;
+  margin-top: 0;
+}
+.wp-easy-grid-desc code {
+  padding: 6px 12px;
+  margin: 3px 0;
+  display: inline-block;
+  color: #000;
+  font-weight: 700;
+}
+.wp-easy-grid-desc button {
+  line-height: 1.5em;
+}
+.dashicons.dashicons-warning,
+.dashicons.dashicons-no-alt {
+  color: #ff0000;
+}
+.dashicons.dashicons-sos {
+  color: #008000;
+}
+.dashicons.dashicons-info,
+.dashicons.dashicons-yes {
+  color: #9acd32;
+}
+.dashicons.dashicons-no-alt,
+.dashicons.dashicons-yes {
+  vertical-align: middle;
+}
+.nav-tabs {
+  display: grid;
+  grid-template-columns: repeat(10, auto);
+  margin: 1em 0;
+  background: #fff;
+}
+.nav > li {
+  margin-bottom: 0;
+  text-align: center;
+  font-weight: 700;
+}
+.nav > li > a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  box-shadow: none;
+}
+.nav > li.active,
+.nav > li:hover,
+.nav > li:focus {
+  text-decoration: none;
+  background-color: #eee;
+}
+.tab-content > .tab-pane {
+  display: none;
+}
+.tab-content > .active {
+  display: block;
 }
